// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with error 1`] = `
<EuiFormRow
  error={
    Array [
      "Must be between 0 and 20",
    ]
  }
  isInvalid={true}
  label="foobar"
>
  <EuiFieldNumber
    aria-label="foobar number input"
    isInvalid={true}
    max={20}
    min={0}
    onChange={[Function]}
    value={30}
  />
</EuiFormRow>
`;

exports[`should render without error 1`] = `
<EuiFormRow
  error={Array []}
  isInvalid={false}
  label="foobar"
>
  <EuiFieldNumber
    aria-label="foobar number input"
    isInvalid={false}
    max={20}
    min={0}
    onChange={[Function]}
    value={10}
  />
</EuiFormRow>
`;
